--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="clear"></div>
 
         <div id="sub_content">
-            I'm a web developer living in the Washington D.C. metro area with 10+ years of professional software development experience. I intend to share some of my web development knowledge and experience here. My areas of expertise are PHP, Python, JavaScript, MySQL, Linux, Shell scripting and Git.
+            I'm a web developer living in the Washington D.C. metro area with 10+ years of professional software development experience. My areas of expertise are PHP, Python, JavaScript, MySQL, Linux, Shell scripting and Git.
         </div>
     </div>
 
