--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="content" class="radius-5">
         <div class="intro-photo radius-3">
             <!-- <img src="images/zubin_khavarian.jpg" alt="Zubin's Photo" /> -->
-            <img src="http://www.gravatar.com/avatar/f4a67e5ec643c2ff2a44981b01346095.jpg?s=124" />
+            <img src="https://www.gravatar.com/avatar/f4a67e5ec643c2ff2a44981b01346095.jpg?s=124" />
         </div>
 
         <div class="intro-text">
