--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="clear"></div>
 
         <div id="sub_content">
-            I'm a web developer living in the Washington D.C. metro area with 10+ years of professional software development experience. My areas of expertise are PHP, Python, JavaScript, MySQL, Linux, Shell scripting and Git.
+            <p>I'm a web developer / front-end engineer living in the Washington D.C. metro area with 12+ years of professional software development experience.</p>
+            <p>You can reach me on Twitter <a href="https://twitter.com/ZubinKhavarian">@ZubinKhavarian</a></p>
         </div>
     </div>
 
